rspec-tools/tests/resources/invalid-asciidoc/two_stuck_includes.adoc
# Header

include::somefile.adoc[]
include::someotherfile.adoc[]

* Other content